Nivel 1, Ejercicio 1: Resolviendo bug extraño, al lanzar test ejercicio 2 me saltaba error por usar métodos de list getLast() y getFirst() en los test del ejercicio 1